4.nov. (ws)
      - change sorting of shortcuts
      - fix cursor height for systems with hidden staves
      - Fix score->pos2measure(): did not work with hidden staves.
        In prelude-sr.mscx example it was not possible to drag dynamics
        to the second staff;
2.nov. (lv)
      - new testfile testTempo1.xml
       (ws)
      - allow change of text properties for staff text
      - implement palette cell properties dialog
      - implement "delete palette entry"
      - script extensions: cursor.isRest(), cursor.rest()
      - fix: tie after accidental creates wrong pitch note
      - save color and invisible attribute for instrument names
1.nov. (ws)
      - simple version of a "split measure" function
      - fix half/double duration (w/q keys)
      - fix crash when drag/drop a bracket
      - fix crash when switching soundfont during play
      - applied patch from strohel: Make build of jack support optional
31.oct. (ws)
      - fix: dot distance in toolbar double dot is now 2/3 space instead of 1/2
      - fix: adding title to template lead to crash
      - fix setting of global AL::sampleRate
      - additional commands for lyrics edit mode:
            - Ctrl+left:  go to previous lyrics
            - Ctrl+right: go to next lyrics
            - Ctrl+up:    go verse up
            - Ctrl+down:  go verse down
      - fix: right/left go to next/prev lyrics if at end/beginning
30.oct.
      (ws)
      - note property dialog: apply changes to all selected notes
      - fixed misplaced middle slur segment
      - fix: Cello in Unison.sf2 plays out of tune
      - fix crash when unloadable soundfont was configured
      - synthesizer: remove old soundfont before loading new one
      (lv)
      - write MusicXML <direction> stop at end of note instead of at start
        of next note
      - fixed all MusicXML regression testfiles
      - new testfile testWedge2.xml
      (og)
      - exportly: Unterminated slurs: \laissezVibrer. Whole notes as part of